[package]
name = "decthings-model-executor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
atomic-counter = "1"
auto_impl = "1"
blob-stream = { path = "../blob-stream" }
decthings-api = { version = "0.1", default-features = false }
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wasmtime = { version = "21", optional = true }
wasmtime-wasi = { version = "21", optional = true }

[features]
default = ["wasm"]
wasm = ["wasmtime", "wasmtime-wasi"]

[dev-dependencies]
async_once = "0.2"
env_logger = "0.10"
lazy_static = "1.4"
tempdir = "0.3"
